--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,9 @@ body{
     color:rgb(212, 197, 197);
     font-size: 20px;
 }
+.title{
+  color: black;
+}
 /* Dropdown Button */
 .dropbtn {
     background-color: #04AA6D;
@@ -19,56 +22,44 @@ body{
     position: relative;
     display: inline-block;
   }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
-  #navbar{
-    background-color: rgb(199, 200, 243);
+#navbar{
+  background-color: rgb(199, 200, 243);
+  display: flex;
+  align-items: center;
+  height: 35px;
+  padding:30px 25px;
+  }
+
+#navbar > a{
     display: flex;
-    align-items: center;
-    height: 35px;
-    padding:30px 25px;
-  }
-  #navbar > a{
-      display: flex;
-      text-decoration: none;
-  }
-  #navbar-links{
-    margin-left:auto;
+    text-decoration: none;
 }
+
+#navbar-links{
+   margin-left:auto;
+}
+
 #navbar-links > a{
     text-decoration: none;
     padding: 2.5px;
     font-size: 22px;
 }
+
 #navbar-links > a:hover{
     font-weight: bold;
     font-size: 30px;
     border: 5px inset;
     border-radius: 10px;
+}
+
+.board{
+  display: flex;
+  justify-content: center;
+}
+
+.row{
+  height: 50px;
+  width: 50px;
+  border: 1px black solid;
 }
